--- a/old_pr/pr4_done/GUI_lab4.form
+++ b/old_pr/pr4_done/GUI_lab4.form
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="ru.mirea.oldpr_7_done.pr4_done.GUI_lab4">
+<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="ru.mirea.old_pr.pr4_done.GUI_lab4">
   <grid id="27dc6" binding="mainbackgr" default-binding="true" layout-manager="BorderLayout" hgap="0" vgap="0">
     <constraints>
       <xy x="20" y="20" width="500" height="110"/>
